PATCH: adding z-index to thead when fixed

--- a/css/TableFilterSort.css
+++ b/css/TableFilterSort.css
@@ -18,4 +18,7 @@ table { table-layout: fixed }
     z-index: 10;
 }
 
-.fixed-header.tableFilterSortFilterInUse table thead {position: fixed;  }
+.fixed-header.tableFilterSortFilterInUse table thead {
+    position: fixed;
+    z-index: 9;
+}
